--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https:/Charanreddy2408.github.io/<Swiggy>",
+  "homepage":"https:// Charanreddy2408.github.io/<Swiggy>",
   "name": "swiggy",
   "version": "0.1.0",
   "private": true,
